trying to start fix engine